<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_more_vert"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/english"
                android:icon="@drawable/ic_english"
                android:title="@string/english"
                app:showAsAction="never" />
            <item
                android:id="@+id/marathi"
                android:icon="@drawable/ic_marathi"
                android:title="@string/marathi"
                app:showAsAction="never" />

        </menu>
    </item>
</menu>
